<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.preference.PreferenceCategory android:title="@string/setting_title_browser">

        <androidx.preference.Preference
            android:title="@string/setting_title_start_control"
            android:summary="@string/setting_summary_start_control"
            android:icon="@drawable/icon_earth"/>

        <androidx.preference.Preference
            android:title="@string/setting_title_clear_control"
            android:icon="@drawable/icon_delete"
            android:summary="@string/setting_summary_clear_control" />

        <website.petrov.browser.view.SearchEngineListPreference
            android:icon="@drawable/icon_search"
            android:key="@string/sp_search_engine"
            android:defaultValue="0"
            android:title="@string/setting_title_search_engine"
            android:summary="@string/setting_summary_search_engine"
            android:entries="@array/setting_entries_search_engine"
            android:entryValues="@array/setting_values_search_engine"/>

    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory android:title="@string/setting_title_app">

        <androidx.preference.Preference
            android:icon="@drawable/icon_ui"
            android:title="@string/setting_title_ui"
            android:summary="@string/setting_summary_ui"/>

        <androidx.preference.Preference
            android:icon="@drawable/gesture_tap"
            android:title="@string/setting_gestures"
            android:summary="@string/setting_gestures_use_summary"/>

        <androidx.preference.Preference
            android:icon="@drawable/icon_backup"
            android:title="@string/setting_title_data"
            android:summary="@string/setting_summary_data"/>

        <androidx.preference.Preference
            android:icon="@drawable/icon_settings"
            android:title="@string/setting_title_appSettings"
            android:summary="@string/setting_summary_appSettings"/>

    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory android:title="@string/setting_title_others">

        <androidx.preference.Preference
            android:icon="@drawable/icon_list"
            android:title="@string/changelog_title"
            android:summary="@string/setting_summary_changelog"/>

        <androidx.preference.Preference
            android:icon="@drawable/icon_group"
            android:title="@string/setting_title_community"
            android:summary="@string/setting_summary_community"/>

        <androidx.preference.Preference
            android:icon="@drawable/icon_copyright"
            android:title="@string/setting_title_license"
            android:summary="@string/setting_summary_license"/>

    </androidx.preference.PreferenceCategory>

</androidx.preference.PreferenceScreen>