<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.preference.Preference android:summary="@string/clear_summary" />

    <androidx.preference.PreferenceCategory android:title="@string/title_database">
        <androidx.preference.Preference
            android:title="@string/setting_title_export_database"
            android:summary="@string/setting_summary_export_database"/>
        <androidx.preference.Preference android:title="@string/setting_title_import_database"/>
    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory android:title="@string/setting_title_adblock">
        <androidx.preference.Preference android:title="@string/setting_title_export_whitelist" />
        <androidx.preference.Preference android:title="@string/setting_title_import_whitelist" />
    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory android:title="@string/setting_title_javascript">
        <androidx.preference.Preference android:title="@string/setting_title_export_whitelistJS" />
        <androidx.preference.Preference android:title="@string/setting_title_import_whitelistJS" />
    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory android:title="@string/setting_title_cookie">
        <androidx.preference.Preference android:title="@string/setting_title_export_whitelistCookie" />
        <androidx.preference.Preference android:title="@string/setting_title_import_whitelistCookie" />
    </androidx.preference.PreferenceCategory>

</androidx.preference.PreferenceScreen>