<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingEnd="20dp"
    android:paddingStart="20dp"
    android:paddingTop="15dp">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ib_icon"
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:layout_gravity="center"
            android:background="?attr/selectableItemBackground"
            app:srcCompat="@drawable/circle_red" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:passwordToggleEnabled="false" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/pass_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/dialog_title_hint"
                android:importantForAutofill="no"
                tools:targetApi="o" />

        </com.google.android.material.textfield.TextInputLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="false" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/pass_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/dialog_url_hint"
            android:importantForAutofill="no"
            tools:targetApi="o" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="false" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/pass_userName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/dialog_sign_in_username"
            android:importantForAutofill="no"
            tools:targetApi="o" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/pass_userPW"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/dialog_sign_in_password"
            android:importantForAutofill="no"
            tools:targetApi="o" />

    </com.google.android.material.textfield.TextInputLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/action_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:textColor="?attr/colorAccent"
            android:background="?attr/selectableItemBackground"
            android:text="@string/app_ok"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/action_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/action_ok"
            android:textColor="?attr/colorAccent"
            android:background="?attr/selectableItemBackground"
            android:text="@string/app_cancel"/>

    </RelativeLayout>

</androidx.appcompat.widget.LinearLayoutCompat>