<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/colorBackground"
    android:paddingEnd="20dp"
    android:paddingStart="20dp"
    android:paddingTop="15dp">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dialog_edit"
            android:selectAllOnFocus="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:hint="@string/dialog_title_hint"
            android:importantForAutofill="no"
            tools:targetApi="o" />

    </com.google.android.material.textfield.TextInputLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/action_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:background="?attr/selectableItemBackground"
            android:textColor="@color/colorAccent"
            android:text="@string/app_ok"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/action_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/action_ok"
            android:background="?attr/selectableItemBackground"
            android:textColor="@color/colorAccent"
            android:text="@string/app_cancel"/>

    </RelativeLayout>

</androidx.appcompat.widget.LinearLayoutCompat>