<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    android:background="?android:attr/colorBackground"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            android:id="@+id/view3">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/whitelist_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout_margin_8dp"
                android:layout_marginLeft="@dimen/layout_margin_8dp"
                android:layout_marginRight="@dimen/layout_margin_8dp"
                android:hint="@string/whitelist_edit_hint"
                android:textCursorDrawable="@null"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:imeOptions="actionDone"
                android:inputType="textMultiLine"
                android:selectAllOnFocus="true"
                android:importantForAutofill="no"
                tools:targetApi="o" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/whitelist_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/layout_margin_8dp"
                android:layout_marginRight="@dimen/layout_margin_8dp"
                android:layout_marginBottom="@dimen/layout_margin_8dp"
                android:text="@string/whitelist_add"
                android:textAllCaps="true"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <ListView android:id="@+id/whitelist"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawSelectorOnTop="true"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/whitelist_empty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_gravity="center|top"
            android:gravity="center"
            android:text="@string/list_empty"
            android:textAllCaps="false"
            android:textColor="@color/color_hint"
            android:visibility="gone"/>

    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.coordinatorlayout.widget.CoordinatorLayout>